# 3pull

./: LICENSE  README.md  package-lock.json  package.json
.devcontainer/: README.md  devcontainer.json
.github/ISSUE_TEMPLATE/: back-end-basic-template.md  front-end-basic-template.md
api/: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 429214a93c4b_init_sqlite.py
api/scripts/: repo_smoke_test.py
api/src/: __init__.py
api/src/app/: main.py
api/src/app/api/: __init__.py  auth.py  deps.py
api/src/app/core/: clock.py  config.py  db.py  ids.py
api/src/app/models/: schemas.py
api/src/app/repositories/: __init__.py  base.py  sqlite.py
api/src/app/routers/v1/: chat_threads.py  folders.py  router.py
api/src/app/routers/v1/endpoints/: health.py  items.py
api/tests/: test_chat_threads.py  test_endpoints.py  test_folders.py
app/[lang]/: layout.tsx  page.tsx
components/home/: index.tsx
components/sample/: index.tsx
constants/: app.ts  index.ts
dictionaries/: en.json  ja.json
docs/: authentication.md  coding-rules.md  constants-management.md  i18n-implement.md  state-management.md  ui-design-rules.md
docs/api/: architecture.md  coding-rules.md
docs/web/: folder-structure.md
store/: useDemoStore.ts
web/: .env.local.example  auth.ts  middleware.ts  package-lock.json  package.json
web/components/: LanguageSwitcher.tsx  lang-switch.tsx
web/constants/: error.ts
web/dictionaries/: en.json  ja.json
web/docs/: i18n-implement.md
web/utils/: dictionaries.ts
(+9 files in other folders)
